--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="index.css" />
-    <title>Tien - Game of Life Project</title>
+    <title>Game of Life Project</title>
 </head>
 <body>
     <header>
@@ -42,43 +42,37 @@
     </header>
     <main>
         <div class="container">
-            <section id="home" class="home-page">
+            <section id="home" class="homepage">
                 <h1><i class="fa-solid fa-hand"></i>, Everyone</h1>
                 <p>The Game of Life: Personal Project.</p>
-                <a href="game.html" class="btn-openlink">
+                <a href="game.html" class="btn-game">
                     <i class="fa-solid fa-play"></i>
                     LET'S PLAY!
                 </a>
             </section>
-
-            <section id="about" class="about-page">
-                <h1>About Me</h1>
-                <div class="about-container">
-                    <div class="about-img">
-                        <img class="myimg" src="./img//tien.jpg" alt="tienpic">
-                    </div>
-                    <div class="about-card">
-                        <div class="card-content">
-                            <div>
-                                <p>My name is Tien Hanprab from Bangkok in Thailand, and I love to travel and try new cultural foods. I also try to practice coding to become a developer.</p>
-                            </div>
-                            <div class="content-list">
-                                <ul>
-                                    <li><i class="fa-solid fa-code"></i> <span>Code</span></li>
-                                    <li><i class="fa-solid fa-bed"></i> <span>Sleep</span></li>
-                                    <li><i class="fa-solid fa-cookie-bite"></i> <span>Repeat</span></li>
-                                </ul>
-                            </div>
+            <section id="about" class="aboutpage">
+                <div class="about-header">
+                    <h1>About Me</h1>
+                    <img class="card-image" src="./img/tien.jpg" alt="tienpic">
+                </div>
+                <div class="about-card">
+                    <div class="card-content">
+                        <div>
+                            <p>My name is Tien Hanprab from Bangkok in Thailand, and I love to travel and try new cultural foods. I also try to practice coding to become a developer.</p>
                         </div>
-                        <a href="#" class="btn-aboutme">
-                            Download CV
-                        </a>
+                    </div>
+                    <div class="content-list">
+                        <ul>
+                            <li><i class="fa-solid fa-code"></i> <span>Code</span></li>
+                            <li><i class="fa-solid fa-bed"></i> <span>Sleep</span></li>
+                            <li><i class="fa-solid fa-cookie-bite"></i> <span>Repeat</span></li>
+                        </ul>
                     </div>
                 </div>
             </section>
         </div>
     </main>
-    <footer class="footer">
+    <footer>
         <div class="container">
             <span>@2023 Tien Hanprab.</span>
         </div>
@@ -89,6 +83,6 @@
     crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-    <script src="script.js"></script>
+    <script src="index.html"></script>
 </body>
 </html>
